--- a/TakePhoto/app/src/main/res/layout/activity_main.xml
+++ b/TakePhoto/app/src/main/res/layout/activity_main.xml
@@ -4,4 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/takePictureFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="35dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/open_camera"/>
+
 </RelativeLayout>
