--- a/TakePhoto/app/src/main/res/layout/activity_main.xml
+++ b/TakePhoto/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/photoPreview"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"/>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/takePictureFAB"
